# aos_core_mp_cpp

./: CMakeLists.txt  host_build.sh
cmake/: AosCoreAPI.cmake  AosCoreCommon.cmake  AosCoreLib.cmake  AosCoreLibInclude.cmake  CodeCoverage.cmake  FindXenvchan.cmake  GenerateVersion.cmake
conan/: conanfile.py
src/: CMakeLists.txt  main.cpp  version.hpp.in
src/app/: CMakeLists.txt  app.cpp  app.hpp
src/cmclient/: CMakeLists.txt  cmclient.cpp  cmclient.hpp
src/communication/: CMakeLists.txt  cmconnection.cpp  cmconnection.hpp  communicationchannel.cpp  communicationchannel.hpp  communicationmanager.cpp  communicationmanager.hpp  iamconnection.cpp  iamconnection.hpp  securechannel.cpp  securechannel.hpp  socket.cpp  socket.hpp  types.hpp  utils.hpp  vchan.cpp  vchan.hpp
src/config/: CMakeLists.txt  config.cpp  config.hpp
src/downloader/: CMakeLists.txt  downloader.cpp  downloader.hpp
src/filechunker/: CMakeLists.txt  filechunker.cpp  filechunker.hpp
src/iamclient/: CMakeLists.txt  iamclient.cpp  iamclient.hpp  publicnodeclient.cpp  publicnodeclient.hpp  publicservicehandler.cpp  publicservicehandler.hpp  types.hpp
src/imageunpacker/: CMakeLists.txt  imageunpacker.cpp  imageunpacker.hpp  serviceimage.cpp  serviceimage.hpp
tests/: CMakeLists.txt
tests/cmclient/: CMakeLists.txt  cmclient_test.cpp
tests/cmclient/stubs/: smservice.hpp
tests/communication/: CMakeLists.txt  communication_open_test.cpp  communication_secure_test.cpp  openssl.conf
tests/communication/cmake/: gencertificates.cmake  softhsm.cmake
tests/communication/stubs/: storagestub.cpp  storagestub.hpp  transport.hpp
tests/communication/utils/: generateimage.hpp
tests/config/: config_test.cpp
tests/downloader/: CMakeLists.txt  downloader_test.cpp
tests/downloader/stubs/: httpserver.hpp
tests/filechunker/: CMakeLists.txt  filechunker_test.cpp
tests/iamclient/: CMakeLists.txt  iamclient_test.cpp
tests/iamclient/stubs/: iamserver.hpp
tests/imageunpacker/: CMakeLists.txt  imageunpacker_test.cpp
